--- a/app/src/styles/globals.css
+++ b/app/src/styles/globals.css
@@ -1,3 +1,11 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+fieldset {
+	@apply bg-yellow-500 flex gap-5 items-center justify-between;
+}
+
 /* :root {
 	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 	line-height: 1.5;
